<resources>
    <string name="app_name">LaporKPS!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Menu String -->
    <string name="home">Home</string>
    <string name="article">Article</string>
    <string name="lapor">Lapor</string>
    <string name="tvname">tvName</string>
    <string name="tvjabatan">tvJabatan</string>
    <string name="image_konselor">image konselor</string>
    <string name="konselor">Konselor</string>

    <!--Article String-->
    <string name="titleArticle">Title Article</string>

    <!--Content Description-->
    <string name="cd_imgArticle">Image Article</string>
    <string name="cd_gradient">Image Gradient Article</string>
    <string name="datePublished">Date</string>
    <string name="buttonShare">Button Share</string>

    <!--Article Fragment-->
    <string name="InformasiTerkiini">Cari Informasi Terkini dan Terlengkap</string>
    <string name="tvKonselorString">Konselor Name</string>
    <string name="tvInstitutionKonselor">Institusi Konselor</string>
    <string name="conselor_image">Conselor Image</string>
    <string name="konselorNameDetail">Adhim Bagas</string>
    <string name="tvkonselorInstitusi">Universitas Negeri  Semarang</string>
    <string name="cd_email">email icon</string>
    <string name="about">About</string>
    <string name="tvAbout">Lorem ipsmu das moko habagui yunita jakaloing</string>
    <string name="address">Address</string>
    <string name="image_addresskonselor">Icon Address</string>
    <string name="daily_practice">Daily Practice</string>
    <string name="tv_daily_practice">Senin - Jum\'at\n09.00 - 10.00 WIB</string>
    <string name="tv_address">Jl. Ahmad Yani No. 9 Gang Anyelir kauman Batang</string>
    <string name="cd_buttonImage">Button Whatsapp</string>
    <string name="button_whatsapp">Button Whatsapp</string>
    <string name="sharingWithUs">Sharing With Us</string>
    <string name="sistem_pakar_robo">Sistem Pakar Robo</string>
    <string name="cw_pakarRobo">Mengkategorikan perilaku apa yang didapat terkait kekerasan dan pelecehan seksual berdasarkan input yang diberikan</string>
    <string name="robo_kps">Robo KPS</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="pertanyaan_gejala">Pertanyaan Gejala</string>
    <string name="kode_soal">P1</string>
    <string name="jawab_sesuai_dengan_keadaan_yang_dialami">Jawab sesuai dengan keadaan yang dialami</string>
    <string name="btn_detail">Detail</string>
    <string name="tv_jenis_perilaku">Perilaku Menggoda</string>
    <string name="anda_mengalami">Anda Mengalami</string>
    <string name="hasil_diagnosa">Hasil Diagnosa</string>
    <string name="img_des_dialogHasil">Image Dialog Hasil Usaha</string>
    <string name="img_des_perilaku">Perilaku Image</string>
    <string name="nama_perilaku">nama perilaku</string>
    <string name="ciri_ciri">Ciri-ciri</string>
    <string name="solusi">Solusi</string>
    <string name="nama">Nama</string>
    <string name="formulir_pengaduan">Formulir Pengaduan</string>
    <string name="alamat">Alamat</string>
    <string name="no_hp">No. HP</string>
    <string name="email">Email</string>
    <string name="perempuan">Perempuan</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="aduan">Aduan</string>
    <string name="official_robo">Official Robo!</string>
    <string name="des_robo">Tell me what\'s going on and i\'ll give you advice</string>
    <string name="diagnosa_image">diagnosa image</string>
    <string name="diagnosa">Diagnosa</string>
    <string name="welcome_to_robo">Welcome To Robo</string>
    <string name="image_list_perilaku">image list perilaku</string>
    <string name="daftar_perilaku">Daftar Perilaku</string>
    <string name="button_input_lapor">Button</string>
    <string name="mulai_konsultasi">Mulai Konsultasi ?</string>
    <string name="splash_screen_logo">splash screen logo</string>

    <!--    Base URL-->


    <!--    Content Description-->

</resources>