<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp"
        android:id="@+id/cardHost"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:padding="5dp"
            >
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/progresBar"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imgrticle"
                android:scaleType="centerCrop"
                android:contentDescription="@string/cd_imgArticle"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/gradient"
                android:background="@drawable/gradient"
                android:contentDescription="@string/cd_gradient"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleArticle"
                android:padding="10dp"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:id="@+id/tvId"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="bottom"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/datePublished"
                    android:gravity="end"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:id="@+id/tvDate"
                    />

            </LinearLayout>
        </FrameLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
