<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="231dp"
    android:layout_height="163dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_homenested"
    style="@style/Base.CardView.Main"
    android:layout_marginEnd="8dp"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_konselor"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:src="@drawable/ic_person"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381"
        android:contentDescription="@string/image_konselor" />

    <TextView
        android:id="@+id/tv_konselor"
        style="@style/tv_konselor_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tvname"
        app:layout_constraintEnd_toStartOf="@+id/img_konselor"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_jabatan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tvjabatan"
        style="@style/tv_konselor_second"
        app:layout_constraintEnd_toStartOf="@+id/img_konselor"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_konselor" />
</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>