<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_konselorHome"
        android:layout_width="230dp"
        android:layout_height="160dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/mainColor"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvKonselor"
                style="@style/tvKonselor_homeFragment_main"
                android:layout_marginStart="10dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="26dp"
                android:text="@string/tvKonselorString"
                app:layout_constraintBottom_toTopOf="@+id/tvInstitution"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvInstitution"
                style="@style/tvKonselor_homeFragment_sekunder"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:text="@string/tvInstitutionKonselor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvKonselor" />

            <ImageView
                android:id="@+id/img_konselor_home"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="8dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvKonselor"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_person"
                android:contentDescription="@string/conselor_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>